[package]
name = "pwned"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "test"
path = "src/test.rs"

[dependencies]
anyhow = "1.0.94"
arboard = "3.4.1"
crossterm = "0.28.1"
data-encoding = "2.6.0"
derive_setters = "0.1.6"
indexmap = "2.7.0"
ratatui = "0.29.0"
ring = "0.17.8"
# rusqlcipher = "0.14.9"
rusqlite = "0.32.1"
